# vidcrafter

./: README.md  pyproject.toml
output/: .gitignore
vidc/: color.py
vidc/color/: IndexedPalette.py  NamedPalette.py  __init__.py  averagers.py  colortypes.py  metrics.py
